# COP2001-Breakout

./: CMakeLists.txt  README.md  SFML CLion Windows.pptx  bounding_walls.cpp  breakout.cpp  breakout_defs.h  collision-1.cpp  moveball.cpp  paddle.cpp
